--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,8 @@
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/logo_bib"
-            android:contentDescription="TODO" />
+            android:contentDescription="@string/logoDescription"
+            app:srcCompat="@drawable/logo_bib" />
 
         <Button
             android:id="@+id/button"
