--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -14,16 +14,16 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/brown"
         android:ems="10"
+        android:hint="@string/placeholderSearch"
         android:inputType="textPersonName"
-        android:text="@string/placeholderSearch"
         android:textAlignment="viewStart"
+        android:textCursorDrawable="@drawable/color_cursor"
         app:layout_constraintEnd_toStartOf="@+id/searchIconImage"
         app:layout_constraintHorizontal_bias="0.596"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:backgroundTint="@color/brown"
-        android:textCursorDrawable="@drawable/color_cursor" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/searchIconImage"
