--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="logoColor">#FAFAE0</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
     <color name="brown">#63381E</color>
 </resources>
